# ALGOS

./: .gitignore
Practica01/: .gitignore  README.md  interactive_search.py  logger_config.py  main.py  performance_comparison.py  performance_test.py  requirements.txt  search_algorithms.py  search_interactive.py
Practica01/search_algorithms/: __init__.py  main.py  otros.py
Practica01/search_algorithms/algorithms/: __init__.py  base.py  binary.py  exponential.py  factory.py  interpolation.py  linear.py
Practica02/: .gitignore  README.md  pyproject.toml
Practica02/practica02/: __init__.py  __main__.py  registry.py
Practica02/practica02/core/: base.py  heap.py  insertion.py  merge.py  quick.py  selection.py
Practica02/practica02/structs/: __init__.py  adapter.py  dllist.py
Practica02/practica02/tests/: __init__.py  conftest.py  test_base.py  test_dllist.py  test_heap.py  test_insertion.py  test_linked_list_sorting.py  test_merge.py  test_quick.py  test_selection.py
Practica02/sortkit/: __init__.py  __main__.py  bench.py  registry.py
Practica02/sortkit/cli/: compare.py  visualize.py
Practica02/sortkit/core/: base.py  heap.py  insertion.py  merge.py  quick.py  selection.py
Practica02/sortkit/structs/: __init__.py  adapter.py  dllist.py
Practica02/sortkit/tests/: __init__.py  conftest.py  test_heap_sort.py  test_insertion_sort.py  test_merge_sort.py  test_quick_sort.py  test_selection_sort.py
Tarea01/: index.tex
Tarea01/exercises/: exercise1.tex  exercise2.tex  exercise3.tex  exercise4.tex  exercise5.tex
Tarea2/: index.tex
(+13 files in other folders)
